--- a/src/app/components/message/message.component.html
+++ b/src/app/components/message/message.component.html
@@ -1,1 +1,6 @@
-<p>message works!</p>
+@if(messageService.message) {
+  <div class=" alert alert-{{ messageService.type }} fixed-alert " role="alert">
+    {{ messageService.message }}
+  </div>
+}
+
