--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,1 +1,23 @@
-<p>sidebar works!</p>
+<div class="d-flex flex-column min-vh-100">
+  <header class="p-3">
+    <a routerLink="/" class="nav-link">
+      <h3>Menu</h3>
+    </a>
+  </header>
+  <main class="p-3 flex-grow-1">
+    <ul class="list-unstyled">
+      <li>
+        <a routerLink="orcamentos"
+           class="text-dark nav-link bg-secondary bg-opacity-50 ps-2 py-2">
+          Orçamentos
+        </a>
+      </li>
+
+    </ul>
+  </main>
+  <footer class="p-3">
+    <p>User</p>
+    <p>Logout</p>
+  </footer>
+</div>
+
